<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail_page"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            >

            <ImageView
                android:id="@+id/detail_medicineImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/medicine_template_a"
                android:contentDescription="@string/medicine_image"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_medicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:text="@string/medicine_name" />

        <TextView
            android:id="@+id/detail_medicineManufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/medicine_manufacturer" />

        <TextView
            android:id="@+id/detail_medicinePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/medicine_price" />

        <TextView
            android:id="@+id/detail_descriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/description_Title" />

        <TextView
            android:id="@+id/detail_medicineDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/medicine_description" />

        <TextView
            android:id="@+id/detail_BuyMedicineTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:text="@string/buy_medicine" />

        <EditText
            android:id="@+id/detail_Edtx_medicineQty"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edtx_custom_qtyfield"
            android:ems="10"
            android:textSize="20sp"
            android:textAlignment="center"
            android:hint="@string/input_qty"
            android:autofillHints="number"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom_main"
            android:textColor="@color/white"
            android:text="@string/buy" />


    </LinearLayout>
</ScrollView>