<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    >

    <RelativeLayout
        android:id="@+id/transMed_comps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/transMed_transDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/transMed_updateBtn"
            android:layout_alignParentStart="true"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:layout_margin="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/transItem_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/transMed_date" />

            <TextView
                android:id="@+id/transItem_medName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/medicine_name" />

            <TextView
                android:id="@+id/transItem_medPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/medicine_price" />

            <TextView
                android:id="@+id/transItem_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/transMed_quantity" />


        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/transMed_updateBtn"-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_toStartOf="@id/transMed_deleteBtn"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_margin="5dp"-->
<!--            android:contentDescription="@string/transItem_update"-->
<!--            />-->

<!--        <Button-->
<!--            android:id="@+id/transMed_deleteBtn"-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_margin="5dp"-->
<!--            android:contentDescription="@string/transItem_delete"-->
<!--            />-->


                <ImageButton
            android:id="@+id/transMed_updateBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_toStartOf="@id/transMed_deleteBtn"
            android:layout_centerVertical="true"
            android:background="@drawable/button_custom_update"
            app:srcCompat="@drawable/baseline_edit_24"
            android:contentDescription="@string/transItem_update"
            />

        <ImageButton
            android:id="@+id/transMed_deleteBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_custom_delete"
            app:srcCompat="@drawable/baseline_delete_forever_24"
            android:contentDescription="@string/transItem_delete"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>