<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:id="@+id/medItem_cardDetails"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/medItem_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/medicine_template_a"
                android:contentDescription="@string/medicine_image"/>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/medItem_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="2dp"
                android:text="@string/medicine_name" />

            <TextView
                android:id="@+id/medItem_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:textSize="16sp"
                android:text="@string/medicine_manufacturer" />

            <TextView
                android:id="@+id/medItem_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:textSize="20sp"
                android:text="@string/medicine_price" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>