<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:elevation="8dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:paddingTop="10dp"

        >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/UpdateQuantity" />

        <EditText
            android:id="@+id/dialog_edtx_newQty"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:layout_below="@id/dialog_title"
            android:background="@drawable/edtx_custom_field"
            android:textSize="22sp"
            android:textAlignment="center"
            android:hint="@string/input_qty"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="number"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/dialog_edtx_newQty"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/dialog_Btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp"
                android:text="@string/cancel" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/dialog_Btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp"
                android:text="@string/confirm" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>


